Add navigation bar to index.html
Added a navigation bar with a link to challenges and a description.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,23 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Python Basics – Class Notes</h1>
-    <p class="subtitle">Simple explanations + small examples to help you practice.</p>
+  <h1>Python Basics – Class Notes</h1>
+  <p class="subtitle">Simple explanations + small examples to help you practice.</p>
+
+  <!-- Navigation Bar -->
+  <nav style="margin-bottom: 24px;">
+    <a href="challenges.html" 
+       style="background-color: var(--accent);
+              color: white;
+              padding: 8px 16px;
+              border-radius: 8px;
+              text-decoration: none;
+              font-weight: 600;
+              transition: background 0.2s;">
+      🧩 Go to Challenges
+    </a>
+    <span style="color: var(--muted); margin-left: 10px;">Practice problems and mini-projects</span>
+  </nav>
 
     <!-- VARIABLES -->
     <section class="card" id="variables">
